syntax = "proto3";

import "github.com/catortiger/exchange/matching_engine/matcher/proto/matcher.proto";

package matcherservice;

service MatcherService {
  rpc GetOrderBook (GetOrderBookRequest) returns (GetOrderBookResponse) {}
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
}

message GetOrderBookRequest {
  matcher.TradingPair trading_pair = 1;
}

message GetOrderBookResponse {
  matcher.OrderBook order_book = 1;
}

message CreateOrderRequest {
  matcher.TradingPair trading_pair = 1;
  matcher.Order order = 2;
}

message CreateOrderResponse {
  repeated matcher.TradeEvent trade_events = 1;
  repeated matcher.OrderBookEvent order_book_events = 2;
}
